<resources>
    <string name="app_name">Diet Online</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="greetings">Greeting</string>
    <string name="sample_name" translatable="false">Farhan Muhammad</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="user_active_package">Your package remaining</string>
    <string name="order_status">Order status</string>
    <string name="logout">Log out</string>
    <string name="hello">Hello </string>
    <string name="sample_nickname" translatable="false">Farhan</string>
    <string name="agreement">I agree to terms and conditions</string>
    <string name="sample_age">19 years old</string>
    <string name="weight">Weight</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="city">City</string>
    <string name="sample_city" translatable="false">Bojonegoro</string>
    <string name="subdistrict">Sub-district</string>
    <string name="sample_subdistrict" translatable="false">Sumberrejo</string>
    <string name="address">Address</string>
    <string name="sample_address" translatable="false">Jl. Aja Dulu no. 70 Desa Konohagakure</string>
    <string name="phone">Phone</string>
    <string name="sample_phone" translatable="false">089654321234</string>
    <string name="birth_date">Birth Date</string>
    <string name="sample_birth_date" translatable="false">12 Mei 2000</string>
    <string name="gender">Gender</string>
    <string name="account_info">Account Info</string>
    <string name="username">Username</string>
    <string name="sample_username" translatable="false">lordfarhan</string>
    <string name="email">E-mail</string>
    <string name="sample_email" translatable="false">farhan@havanah.id</string>
    <string name="last_updated">Last Updated</string>
    <string name="sample_date_format" translatable="false">12 Mei 2018</string>
    <string name="medical_info">Medical Info</string>
    <string name="sample_weight" translatable="false">70 Kg</string>
    <string name="height">Height</string>
    <string name="sample_height" translatable="false">165 Cm</string>
    <string name="years_old">years old</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="account_created">Account Created</string>
    <string name="please_enter_your_pass_to_confirm">Please enter your password to confirm!</string>
    <string name="edit">Edit</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="edit_account_info">Edit Account Info</string>
    <string name="edit_medical_info">Edit Medical Info</string>
    <string name="prohibition">Prohibition</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="sample_bmi" translatable="false">22</string>
    <string name="sample_prohibition" translatable="false">Makan hati</string>
    <string name="manual_book">Manual Book</string>
    <string name="make_a_plan">Make a Plan</string>
    <string name="about_partner">Partner</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="underweight">Underweight</string>
    <string name="ideal">Ideal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="item">Item</string>
    <string name="package_daily" translatable="false">Katering Harian</string>
    <string name="package_daily_description" translatable="false">Layanan Katering Makanan sehat harian (non-diet) yang tidak menggunakan pengawet ataupun penyedap, dan menggunakan bahan makanan segar dan alami, serta mengacu pada pedoman gizi seimbang. Minimal pemesanan 5x pengiriman.</string>
    <string name="package_lunch" translatable="false">Single Lunch Box</string>
    <string name="package_lunch_description" translatable="false">Layanan katering makanan siang sehat yang dapat dikirim ke tempat kerja, sekolah ataupun kampus. Dikemas dalam mika bento sekali pakai. Hanya melayani pengiriman siang dari hari senin-jumat. Tidak menggunakan penyedap maupun pengawet makanan.</string>
    <string name="package_specific" translatable="false">Diet Khusus</string>
    <string name="package_specific_description" translatable="false">Merupakan layanan katering yang bersifat personal sesuai dengan kebutuhan dan kondisi pasien /klien. Katering ini cocok untuk seseorang yang membutuhkan pengaturan makan terkait dengan masalah kesehatan seperti Diabetes Mellitus, Hipertensi, Asam Urat, Gagal ginjal, dll, dan juga untuk pasien yang baru keluar dari RS dan membutuhkan makanan khusus (makanan cair, lunak, dll).</string>
    <string name="package_specific_description_1" translatable="false">Setelah memesan, seorang ahli gizi akan menghubungi anda melalui aplikasi Whatsapp.</string>
    <string name="package_weight_loss" translatable="false">Weight Loss Diet</string>
    <string name="package_weight_loss_description" translatable="false">Paket ini ditujukan bagi anda yang menginginkan tubuh ideal dengan menurunkan berat badan. &lt;a href=http://link1/terms> Untuk lebih lengkapnya silahkan membaca panduan berikut.&lt;/a></string>
    <string name="package_weight_loss_description_1" translatable="false">Pengiriman dilakukan 1x dalam sehari untuk makan siang dan makan malam. Menu pagi disiapkan sendiri oleh klien sesuai petunjuk yang telah tersedia. <b>Pengiriman Diet Mayo akan dimulai setiap hari senin</b>.</string>
    <string name="day">Day</string>
    <string name="day_to_send">Day to Send</string>
    <string name="time_to_send">Time to Send</string>
    <string name="amount">Amount</string>
    <string name="order">Order</string>
    <string name="payment_warning">The amount you have to pay</string>
    <string name="one_step_more">One step more</string>
    <string name="order_now">Order Now</string>
    <string name="choose_package">Choose from 4 kind of package</string>
    <string name="please_enter_your_data">Please enter your valid data completely before going to the next step</string>
    <string name="notice_medical_data">Please make sure that your medical data is correct, click confirm to confirm this disclaimer, and click ensure button to be directed to the medical data edit form!</string>
    <string name="notice_medical_data_title">Validate the medical data</string>
    <string name="confirm">Confirm</string>
    <string name="ensure">Ensure</string>
    <string name="package_daily_personal_content" translatable="false">Terdiri dari nasi, lauk hewani, lauk nabati, sayur, snack atau buah, kerupuk dan sambal yang dikonsumsi untuk satu orang.</string>
    <string name="package_daily_family2_content" translatable="false">Terdiri dari nasi, lauk hewani, lauk nabati, sayur, snack atau buah, kerupuk dan sambal yang dikonsumsi untuk dua orang.</string>
    <string name="package_daily_family3_content" translatable="false">Terdiri dari nasi, lauk hewani, lauk nabati, sayur, snack atau buah, kerupuk dan sambal yang dikonsumsi untuk tiga orang.</string>
    <string name="description">Description</string>
    <string name="about_developer">Developer</string>
    <string name="pay_before">Please pay before</string>
    <string name="payment_cancelled">If passed, the transaction will automatically cancelled.</string>
    <string name="upload_place">Upload your payment proof here</string>
    <string name="choose">Choose</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="done">Done</string>
    <string name="lunch">Lunch</string>
    <string name="time">Time</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="status">Status</string>
    <string name="pay">Pay</string>
    <string name="accept">Accept</string>
    <string name="extend">Extend</string>
    <string name="notice_create_transaction">I agree the terms of Diet Online transaction agreement</string>
    <string name="agreement_unchecked">Please check the agreement checkbox!</string>
    <string name="notice_extend_order">You can extend order only if your available order is last 3</string>
    <string name="note">Note</string>
    <string name="notice_select_days_and_times">Please select the days and times to send</string>
    <string name="notice_minimum_amount">Minimum amount is 5</string>
    <string name="processing_transaction">Processing your transaction</string>
    <string name="next">Next</string>
    <string name="fetching_data">Fetching data</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="choose_image">Choose Image</string>
    <string name="processing_upload">Processing upload</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="successfully_cancelled">Successfully cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="failed_confirmation">Failed confirmation</string>
    <string name="notice_unpaid">Please pay your previous transaction first</string>
    <string name="loading_profile">Loading profile</string>
    <string name="your_package">Your package</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="successfully_login">Successfully logged in, congrats!</string>
    <string name="remaining">remaining</string>
    <string name="sedentary">Sedentary</string>
    <string name="sedentary_description">Daily activities require minimal effort such as resting, desk work or driving.</string>
    <string name="low_active">Low Active</string>
    <string name="low_active_description">Daily activities require some effort such as periods of standing, housework or some light exercise.</string>
    <string name="active">Active</string>
    <string name="active_description">Daily activities require reasonable effort such as standing, physical work or regular moderate exercise.</string>
    <string name="very_active">Very Active</string>
    <string name="very_active_description">Daily activities require intense physical effort such as construction work or regular vigorous exercise.</string>
    <string name="start">Start</string>
    <string name="upload_lab_test">Upload Your Lab Test Result</string>
    <string name="upload_lab_test_desc">Please serve the data which we can use to determine which package is suitable for you.</string>
    <string name="upload_lab_test_desc_2">Such as blood test completely, blood sugar test, cholesterol or others.</string>
    <string name="input_note_description">Please fill in the note column, or if it is empty, write it with a strip.</string>
    <string name="notice">Notice</string>
    <string name="notice_weight_loss">Diet Mayo will be started from monday. If you agree the transaction will be proceed, if not it will be cancelled.</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="food_type">Food Type</string>
    <string name="needs_of_certain_diseases">Needs of certain diseases</string>
</resources>