<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/grey_100"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/notice"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3sp"
                android:background="@color/grey_100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/notice_weight_loss" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_disagree"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@color/red"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/disagree"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/agree"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>