<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transaction.order.WeightLossPackageForward">

    <include layout="@layout/havanah_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/note"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/input_note_description"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape_rectangle_white"
            android:elevation="2sp"
            android:padding="8sp"
            android:textAlignment="textStart" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>